--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -16,10 +16,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7484df51-b002-414c-ae42-75a2df57c78d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting pandas\n",
+      "  Downloading pandas-2.3.3-cp314-cp314-win_amd64.whl.metadata (19 kB)\n",
+      "Collecting numpy>=1.26.0 (from pandas)\n",
+      "  Downloading numpy-2.3.4-cp314-cp314-win_amd64.whl.metadata (60 kB)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\vladuu3\\documents\\repositaries\\lab2\\.venv\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
+      "Collecting pytz>=2020.1 (from pandas)\n",
+      "  Downloading pytz-2025.2-py2.py3-none-any.whl.metadata (22 kB)\n",
+      "Collecting tzdata>=2022.7 (from pandas)\n",
+      "  Downloading tzdata-2025.2-py2.py3-none-any.whl.metadata (1.4 kB)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\vladuu3\\documents\\repositaries\\lab2\\.venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n",
+      "Downloading pandas-2.3.3-cp314-cp314-win_amd64.whl (11.1 MB)\n",
+      "   ---------------------------------------- 0.0/11.1 MB ? eta -:--:--\n",
+      "   ---- ----------------------------------- 1.3/11.1 MB 7.9 MB/s eta 0:00:02\n",
+      "   ------------------------------ --------- 8.4/11.1 MB 24.0 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 11.1/11.1 MB 20.8 MB/s  0:00:00\n",
+      "Downloading numpy-2.3.4-cp314-cp314-win_amd64.whl (12.9 MB)\n",
+      "   ---------------------------------------- 0.0/12.9 MB ? eta -:--:--\n",
+      "   ------------------- -------------------- 6.3/12.9 MB 33.1 MB/s eta 0:00:01\n",
+      "   ---------------------------------------- 12.9/12.9 MB 30.2 MB/s  0:00:00\n",
+      "Downloading pytz-2025.2-py2.py3-none-any.whl (509 kB)\n",
+      "Downloading tzdata-2025.2-py2.py3-none-any.whl (347 kB)\n",
+      "Installing collected packages: pytz, tzdata, numpy, pandas\n",
+      "\n",
+      "   ---------------------------------------- 0/4 [pytz]\n",
+      "   ---------- ----------------------------- 1/4 [tzdata]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   -------------------- ------------------- 2/4 [numpy]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ------------------------------ --------- 3/4 [pandas]\n",
+      "   ---------------------------------------- 4/4 [pandas]\n",
+      "\n",
+      "Successfully installed numpy-2.3.4 pandas-2.3.3 pytz-2025.2 tzdata-2025.2\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install pandas"
    ]
@@ -35,14 +194,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "bfc3346f-3843-4aff-aec0-54321b9774f0",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: pandas in c:\\users\\vladuu3\\documents\\repositaries\\lab2\\.venv\\lib\\site-packages (2.3.3)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in c:\\users\\vladuu3\\documents\\repositaries\\lab2\\.venv\\lib\\site-packages (from pandas) (2.3.4)\n",
+      "Requirement already satisfied: python-dateutil>=2.8.2 in c:\\users\\vladuu3\\documents\\repositaries\\lab2\\.venv\\lib\\site-packages (from pandas) (2.9.0.post0)\n",
+      "Requirement already satisfied: pytz>=2020.1 in c:\\users\\vladuu3\\documents\\repositaries\\lab2\\.venv\\lib\\site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: tzdata>=2022.7 in c:\\users\\vladuu3\\documents\\repositaries\\lab2\\.venv\\lib\\site-packages (from pandas) (2025.2)\n",
+      "Requirement already satisfied: six>=1.5 in c:\\users\\vladuu3\\documents\\repositaries\\lab2\\.venv\\lib\\site-packages (from python-dateutil>=2.8.2->pandas) (1.17.0)\n"
+     ]
+    }
+   ],
    "source": [
-    "# write your code here"
+    "!pip install pandas"
    ]
   },
   {
@@ -57,14 +229,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "fa5deec6-c85e-4d88-89df-bea7d75fcbba",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Чтение данных из файла 'titanic.csv'\n",
-    "# Используйте метод pd.read_csv()\n",
-    "# write your code here"
+    "import pandas as pd\n",
+    "df = pd.read_csv('titanic.csv')"
    ]
   },
   {
@@ -78,14 +249,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "216e104c-259f-4ecd-9cd4-40362f61ca4e",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   PassengerId  Survived  Pclass  \\\n",
+      "0            1         0       3   \n",
+      "1            2         1       1   \n",
+      "2            3         1       3   \n",
+      "3            4         1       1   \n",
+      "4            5         0       3   \n",
+      "\n",
+      "                                                Name     Sex   Age  SibSp  \\\n",
+      "0                            Braund, Mr. Owen Harris    male  22.0      1   \n",
+      "1  Cumings, Mrs. John Bradley (Florence Briggs Th...  female  38.0      1   \n",
+      "2                             Heikkinen, Miss. Laina  female  26.0      0   \n",
+      "3       Futrelle, Mrs. Jacques Heath (Lily May Peel)  female  35.0      1   \n",
+      "4                           Allen, Mr. William Henry    male  35.0      0   \n",
+      "\n",
+      "   Parch            Ticket     Fare Cabin Embarked  \n",
+      "0      0         A/5 21171   7.2500   NaN        S  \n",
+      "1      0          PC 17599  71.2833   C85        C  \n",
+      "2      0  STON/O2. 3101282   7.9250   NaN        S  \n",
+      "3      0            113803  53.1000  C123        S  \n",
+      "4      0            373450   8.0500   NaN        S  \n"
+     ]
+    }
+   ],
    "source": [
-    "# Вывод первых 5 строк данных\n",
-    "# Используйте метод .head()\n",
-    "# write your code here"
+    "import pandas as pd\n",
+    "df = pd.read_csv('titanic.csv')\n",
+    "print(df.head())"
    ]
   },
   {
@@ -99,11 +297,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "43650b4f-f3e7-4480-b874-b5552f564383",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 891 entries, 0 to 890\n",
+      "Data columns (total 12 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   PassengerId  891 non-null    int64  \n",
+      " 1   Survived     891 non-null    int64  \n",
+      " 2   Pclass       891 non-null    int64  \n",
+      " 3   Name         891 non-null    object \n",
+      " 4   Sex          891 non-null    object \n",
+      " 5   Age          714 non-null    float64\n",
+      " 6   SibSp        891 non-null    int64  \n",
+      " 7   Parch        891 non-null    int64  \n",
+      " 8   Ticket       891 non-null    object \n",
+      " 9   Fare         891 non-null    float64\n",
+      " 10  Cabin        204 non-null    object \n",
+      " 11  Embarked     889 non-null    object \n",
+      "dtypes: float64(2), int64(5), object(5)\n",
+      "memory usage: 83.7+ KB\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "print(df.info())"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -279,7 +507,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -293,7 +521,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.14.0"
   }
  },
  "nbformat": 4,
